two new sections

--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -98,6 +98,11 @@
 		
 		\section{Stetigkeit}
 		\subfile{sections/section2-5.tex}
+		
+		\section{Der Zwischenwertsatz}
+		\subfile{sections/section2-6.tex}
 	
+		\section{Der Satz über die Umkehrabbildung}
+		\subfile{sections/section2-7.tex}
 
 \end {document}
