--- a/sections/section2-5.tex
+++ b/sections/section2-5.tex
@@ -69,4 +69,8 @@ Sei $D \subseteq \mathbb{R}$ eine nicht-leere Teilmenge
 	gilt. Dies beweist auch die letzte Aussage, da $x_0$ ein beliebiger Punkt in $D_1$ war.
 \end{proof}
 \subsection{Komplex-wertige Funktionen}
+
+Für eine Menge $D$ können wir in Analog zum reelle Vektorraum $\mathcal{F}(D)$ auch den komplexen Vektorraum
+\[\mathcal{F}_{\mathbb{C}}(D) = \{f | f : D \to \mathbb{C} \}\]
+der $\mathbb{C}$-\textbf{wertige Funktionen} oder \textbf{komplex-wertige Funktionen} auf $D$ definieren. Weiter sagen wir, dass Funktion $f : D \to \mathbb{C}$ \textbf{beschränkt} ist, falls die reellwertige Funktion $x \in D \mapsto |f(x)|$ beschränkt ist. Ein Punkt $x \in D$ ist eine \textbf{Nullstelle} einer Funktion $f : D \to \mathbb{C}$, falls $f(x) = 0$ gilt.
 \end{document}
