--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -104,5 +104,18 @@
 	
 		\section{Der Satz über die Umkehrabbildung}
 		\subfile{sections/section2-7.tex}
-
+		
+		\section{Stetige Funktionen auf kompakten Intervallen}
+		\subfile{sections/section2-8.tex}
+		
+	\chapter{Folgen und Grenzwerte}
+		\section{Konvergenz von Folgen}
+		\subfile{sections/section3-1.tex}
+		
+		\section{Reelle Folgen}
+		\section{Die Exponentialfunktion}
+		\section{Grenzwerte von Funktionen}
+		\section{Rimann Summe}
+		\section{Landau Notation}
+		
 \end {document}
