"Real limits" section & some new labels in previous sections

--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, twoside, openright]{report}
+	\documentclass[12pt, twoside, openright]{report}
 % ------------- Graphic ------------------------
 \usepackage{svg}
 \usepackage{graphicx}
@@ -113,6 +113,8 @@
 		\subfile{sections/section3-1.tex}
 		
 		\section{Reelle Folgen}
+		\subfile{sections/section3-2.tex}
+		
 		\section{Die Exponentialfunktion}
 		\section{Grenzwerte von Funktionen}
 		\section{Rimann Summe}
