--- a/sections/section1-5.tex
+++ b/sections/section1-5.tex
@@ -28,7 +28,7 @@
 	Eine Teilemenge $X \subseteq \mathbb{R}$ heisst \textbf{von oben beschränkt}, falls es ein $s \in \mathbb{R}$ gibt mit $x \leq s$ für alle $x \in X$. Ein solches $s \in \mathbb{R}$ nennt man in diesem Fall eine \textbf{obere Schranke} von $X$. Die Begriffe "\textbf{von unter beschränkt}" und "\textbf{untere Schranke}" sind analog definiert. Eine Teilmenge $X \subseteq \mathbb{R}$ heisst \textbf{beschränkt}, falls sie von oben und von unter beschränkt ist.
 \end{definition}
 
-\begin{proposition}{(Supremum)}
+\begin{proposition}{(Supremum)}\label{prop:supremum}
 	Sei $X \subseteq \mathbb{R}$ eine von oben beschränkte, nicht-leere Teilmenge. Dann gibt es eine \textbf{kleinste obere Schranke} von $X$, die auch das \textbf{Supremum} $\sup (X)$ gennant wird. Formal gelten also für $s_0 = \sup(X)$ folgende Eigenschaften:
 	\begin{enumerate}
 		\item{($s_0$ ist eine obere Scharnke)} $\forall x \in X : x \leq s_0$
